<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplitCost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="numPeople">人数：</string>
    <string name="People">人</string>
    <string name="Yen">円</string>
    <string name="yen">円</string>
    <string name="people">人</string>
    <string name="calc">計算</string>
    <string name="money">金額</string>
    <string name="Money">金額：</string>
    <string name="oneMoney">一人当たりの金額</string>
    <string name="result">××××</string>
    <string name="reset">リセット</string>

</resources>
